<resources>
    <string name="app_name">Car Rental Project</string>
    <string name="login">Login</string>
    <string name="username">Username</string>

    <string name="manage_cars">Manage Cars</string>
    <string name="manage_employees">Manage Employees</string>
    <string name="manage_users">Manage Users</string>
    <string name="admin_action_fragment">Admin Action Fragment</string>
    <string name="add_new_car">Add New Car</string>
    <string name="manage_cars_fragment">Manage Car Fragment</string>
    <string name="brand_name">Brand Name</string>
    <string name="vin_number">VIN Number</string>
    <string name="model_number">Model Number</string>
    <string name="color">Color</string>
    <string name="add_car">Add Car</string>
    <string name="add_car_fragment">Add Car Fragment</string>
    <string name="capacity">Capacity</string>
    <string name="price_per_hour">Price Per Hour</string>
    <string name="price_per_day">Price Per Day</string>
    <string name="register_with_us">Don\'t Have a account? Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="car_image">Car Image</string>
</resources>
